external-crates/move/crates/move-compiler/tests/move_2024/typing/macro_duck_typing_constraint_invalid.exp
error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/macro_duck_typing_constraint_invalid.move:9:41
   │
 2 │     public struct X<phantom T: copy>() has copy, drop;
   │                                ---- 'copy' constraint declared here
 3 │     public struct None() has drop;
   │                   ---- To satisfy the constraint, the 'copy' ability would need to be added here
   ·
 9 │     macro fun needs_copy<$T, $U, $V>(_: X<$T>, _: $U, $v: $V): X<$U> {
   │                                         ^^^^^ 'copy' constraint not satisifed
   ·
16 │         needs_copy!<None, None, None>(X(), None(), None());
   │                     ---- The type 'a::m::None' does not have the ability 'copy'

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/macro_duck_typing_constraint_invalid.move:9:64
   │
 2 │     public struct X<phantom T: copy>() has copy, drop;
   │                                ---- 'copy' constraint declared here
 3 │     public struct None() has drop;
   │                   ---- To satisfy the constraint, the 'copy' ability would need to be added here
   ·
 9 │     macro fun needs_copy<$T, $U, $V>(_: X<$T>, _: $U, $v: $V): X<$U> {
   │                                                                ^^^^^ 'copy' constraint not satisifed
   ·
16 │         needs_copy!<None, None, None>(X(), None(), None());
   │                           ---- The type 'a::m::None' does not have the ability 'copy'

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/macro_duck_typing_constraint_invalid.move:10:9
   │
 3 │     public struct None() has drop;
   │                   ---- To satisfy the constraint, the 'copy' ability would need to be added here
 4 │ 
 5 │     fun mycopy<T: copy>(t: &T): T {
   │                   ---- 'copy' constraint declared here
   ·
10 │         mycopy(&$v);
   │         ^^^^^^^^^^^ 'copy' constraint not satisifed
   ·
16 │         needs_copy!<None, None, None>(X(), None(), None());
   │                                 ---- The type 'a::m::None' does not have the ability 'copy'

error[E03006]: unexpected name in this position
   ┌─ tests/move_2024/typing/macro_duck_typing_constraint_invalid.move:10:17
   │
10 │         mycopy(&$v);
   │                 ^^ Macro parameters are not allowed to appear in paths
   │
   = To use a macro parameter as a value in a path expression, first bind it to a local variable, e.g. 'let v = $v;'
   = Macro parameters are always treated as value expressions, and are not modified by path operations.
     Path operations include 'move', 'copy', '&', '&mut', and field references

error[E05001]: ability constraint not satisfied
   ┌─ tests/move_2024/typing/macro_duck_typing_constraint_invalid.move:11:9
   │
 2 │     public struct X<phantom T: copy>() has copy, drop;
   │                                ---- 'copy' constraint declared here
 3 │     public struct None() has drop;
   │                   ---- To satisfy the constraint, the 'copy' ability would need to be added here
   ·
11 │         X()
   │         ^^^ 'copy' constraint not satisifed
   ·
16 │         needs_copy!<None, None, None>(X(), None(), None());
   │                           ---- The type 'a::m::None' does not have the ability 'copy'

